--- a/PracticeMVC/PracticeMVC/Views/Home/Create.cshtml
+++ b/PracticeMVC/PracticeMVC/Views/Home/Create.cshtml
@@ -1,19 +1,32 @@
-﻿<div class="row">
+﻿@model  StudentCreateViewModel
+
+
+@{
+    ViewData["Title"] = "Create";
+}
+
+<!--Model Validation-->
+<div class="row">
     <div class="col-md-8">
-        <form>
+        <form enctype="multipart/form-data" asp-controller="home" asp-action="create" method="post" class="mt-3">
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Name</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">               
+                <label asp-for="Name" class="form-label">Name</label>
+                <input asp-for="Name " type="text" class="form-control">
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Address</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <label asp-for="Address" class="form-label">Address</label>
+                <input asp-for="Address" type="text" class="form-control">
+                <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Faculty</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <label asp-for="Faculty" class="form-label">Faculty</label>
+                <input asp-for="Faculty" type="text" class="form-control">
+                <span asp-validation-for="Faculty" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <button type="submit" class="btn btn-primary">Create Student</button>
+
         </form>
     </div>
 </div>
