--- a/PracticeMVC/PracticeMVC/Views/Home/Delete.cshtml
+++ b/PracticeMVC/PracticeMVC/Views/Home/Delete.cshtml
@@ -1,15 +1,15 @@
-﻿@model StudentEditViewModel
+﻿@model StudentDeleteViewModel
 
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Delete";
 }
 
 <!--Model Validation-->
 <div class="row">
     <div class="col-md-8">
-        <form enctype="multipart/form-data" asp-controller="home" asp-action="edit" method="post"  class="mt-3">
-            <input hidden asp-for="Id"/>
+        <form enctype="multipart/form-data" asp-controller="home" asp-action="delete" method="post" class="mt-3">
+            <input hidden asp-for="Id" />
             <div class="mb-3">
                 <label asp-for="Name" class="form-label">Name</label>
                 <input asp-for="Name " type="text" class="form-control">
@@ -26,7 +26,9 @@
                 <span asp-validation-for="Faculty" class="text-danger"></span>
             </div>
             <div asp-validation-summary="All" class="text-danger"></div>
-            <button type="submit" class="btn btn-primary">Edit Student</button>
+            <button type="submit" class="btn btn-primary">Delete</button>
+            <a asp-controller="home" asp-action="index" class="btn btn-success mb-2">Cancel</a> 
+
 
         </form>
     </div>
