--- a/PracticeMVC/PracticeMVC/Views/Home/Index.cshtml
+++ b/PracticeMVC/PracticeMVC/Views/Home/Index.cshtml
@@ -15,15 +15,19 @@
             <th>Name</th>
             <th>Address</th>
             <th>Faculty</th>
+            <th>Button</th>
         </tr>
         @foreach (var student in Model)
         {
-            <tr>
-                <td>@student.Id</td>
-                <td>@student.Name</td>
-                <td>@student.Address</td>
-                <td>@student.Faculty</td>
-            </tr>
+    <tr>
+        <td>@student.Id</td>
+        <td>@student.Name</td>
+        <td>@student.Address</td>
+        <td>@student.Faculty</td>
+        <td><a asp-controller="home" asp-action="edit" class="btn btn-success" asp-route-id="@student.Id">Edit</a></td>
+         <td><a asp-controller="home" asp-action="delete" asp-route-id="@student.Id" class="btn btn-danger">Delete</a></td>
+
+    </tr>
 
         }
 
@@ -31,8 +35,8 @@
        
 
         <a asp-controller="home" asp-action="create" class="btn btn-primary">Create</a>
-        <a asp-controller="" asp-action=""  class="btn btn-danger">Delete</a>
-        <a asp-controller="home" asp-action="edit"  class="btn btn-success">Edit</a>
+        @*<a asp-controller="" asp-action=""  class="btn btn-danger">Delete</a>
+        <a asp-controller="home" asp-action="edit"  class="btn btn-success">Edit</a>*@
 
 
 </div>
