--- a/PracticeMVC/PracticeMVC/Views/_ViewImports.cshtml
+++ b/PracticeMVC/PracticeMVC/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using PracticeMVC
 @using PracticeMVC.Models
+@using PracticeMVC.ViewModels
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
